fix: add wrap to alert

--- a/src/components/core/alert/alert.module.scss
+++ b/src/components/core/alert/alert.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   gap: var(--space-xs);
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .title {
